Enable CED HTML5 mode

Set CED(Compact Encoding Detector) to HTML5 mode in which
the detector always returns WHATWG-compliant text encoding
as output. Call sites now don't have to do post-detection
conversion, which is removed in this CL together.

BUG=698605

Review-Url: https://codereview.chromium.org/2746843002
Cr-Commit-Position: refs/heads/master@{#456610}

Former-commit-id: dd643ddc92e12037e88c4d9e004a868e90c3e5ca